--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body {
     background:#E2E4E6;
     padding-top:4em;
+    background: url(./assets/images/mg.png) no-repeat;
 }
 
 .form-container {
