--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,21 @@
 <div class="form-container">
-     <img src="assets/images/lock.png" id="lock"> 
   
-      <span class="error" *ngIf="error">{{ error }}</span>
+        <img src="assets/images/lock.png" id="lock"> 
   
-    <button (click)="loginFb()" id="fb">Login With Facebook</button><br>
-    <button (click)="LoginG()" id="google">Login With Google</button>
-    <button routerLink="/login-email" id="email">Email</button>
+        <span class="error" *ngIf="error">{{ error }}</span>
+    
+      <button (click)="loginFb()" id="fb">Login With Facebook</button><br>
+      <button (click)="LoginG()" id="google">Login With Google</button>
+      <button routerLink="/login-email" id="email">Email</button>
+    
+      <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+         <app-email></app-email>
+
+      </div>
+    </div>
+    
   
-    <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
-  </div>
   
