--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-         <app-email></app-email>
+         <!-- <app-email></app-email> -->
 
       </div>
     </div>
